--- a/site/imgType03.html
+++ b/site/imgType03.html
@@ -13,7 +13,7 @@
             vertical-align: top;
         }
 
-        /* ir 효과(이미지 대체 효과 == alt) */
+        /* ir 효과(이미지 대체 효과) */
         .ir {
             display: block;
             overflow: hidden;
