--- a/javascript/javascript05.html
+++ b/javascript/javascript05.html
@@ -83,9 +83,9 @@
                 <li><a href="#sample08">11. 문자열 메서드 : 검색: includes():문자열 포함여부 검색:반환 불린</a></li>
 
                 <li><a href="#sample06">12. 문자열 메서드 : 검색: search():문자열을 검색 정규식:반환 (숫자)</a></li>
-                <li><a href="#sample07">12. 문자열 메서드 : 검색: match():문자열을 검색 정규식:반환 (배열)</a></li>
+                <li><a href="#sample07">13. 문자열 메서드 : 검색: match():문자열을 검색 정규식:반환 (배열)</a></li>
 
-                <li><a href="#sample05">12. 문자열 메서드 : 검색: charAt() : 지정한 인텍스의 문자를 추출 :반환 (문자열)</a></li>
+                <li><a href="#sample05">14. 문자열 메서드 : 검색: charAt() : 지정한 인텍스의 문자를 추출 :반환 (문자열)</a></li>
                 <li><a href="#sample05">12. 문자열 메서드 : 검색: charCodeAt() : 지정한 인텍스의 문자를 추출 :반환 (숫자)</a></li>
                 <li><a href="#sample09">12. 문자열 메서드 : 검색: starsWith():문자열 포함여부 검색:반환 (불린)</a></li>
                 <li><a href="#sample10">12. 문자열 메서드 : 검색: endsWith():문자열 포함 여부 검색: 반환 (불린)</a></li>
@@ -578,6 +578,69 @@ const currentStr8 = str1.includes("reference", 12);//false
                 </div>
             </div>
             <!-- //sample11 -->
+            <div id="sample12" class="sample">
+                <h3>12. 문자열 메서드 : 검색: search():문자열을 검색 정규식:반환 (숫자)</h3>
+                <p> </p>
+                <div class="script">
+                    <pre><code class="language-js">{
+// "문자열".search("검색값");
+// "문자열".search(정규식 표현);
+
+const str1 = "javascript reference";
+const currentStr1 = str1.search("javascript"); //0
+const currentStr2 = str1.search("reference"); //11
+const currentStr3 = str1.search("j"); //0
+const currentStr4 = str1.search("a"); //1
+const currentStr5 = str1.search("v"); //2
+const currentStr6 = str1.search("jquery"); //-1
+const currentStr7 = str1.search("b"); //-1
+const currentStr8 = str1.search(/[a-z]/g); //0
+}
+</code></pre>
+                </div>
+            </div>
+            <!-- //sample12 -->
+            <br>
+            <br>
+            <div id="sample13" class="sample">
+                <h3>13. 문자열 메서드 : 검색: match():문자열을 검색 정규식:반환 (배열)</h3>
+                <p> </p>
+                <div class="script">
+                    <pre><code class="language-js">{
+const str1 = "javascript reference";
+const currentStr1 = str1.match("javascript"); //javascript
+const currentStr2 = str1.match("reference"); //reference
+const currentStr3 = str1.match("r"); //r
+const currentStr4 = str1.match(/reference/); //reference
+const currentStr5 = str1.match(/Reference/); //null
+const currentStr6 = str1.match(/Reference/i); //reference
+const currentStr7 = str1.match(/r/g); //['r', 'r', 'r']
+const currentStr8 = str1.match(/e/g); //['e', 'e', 'e', 'e']
+}
+</code></pre>
+                </div>
+            </div>
+            <!-- //sample13 -->
+            <br>
+            <br>
+            <div id="sample14" class="sample">
+                <h3>14. 문자열 메서드 : 검색: charAt() : 지정한 인텍스의 문자를 추출 :반환 (문자열)</h3>
+                <p> </p>
+                <div class="script">
+                    <pre><code class="language-js">{
+"문자열".charAt(숫자);
+
+const str1 = "javascript reference";
+const currentStr1 = str1.charAt(); //j
+const currentStr2 = str1.charAt("0"); //j
+const currentStr3 = str1.charAt("1"); //a
+const currentStr4 = str1.charAt("2"); //v
+}
+</code></pre>
+                </div>
+            </div>
+            <!-- //sample14 -->
+
 
 
 
@@ -858,6 +921,46 @@ const currentStr8 = str1.includes("reference", 12);//false
             const currentStr7 = str1.includes("reference", 11);//true
             const currentStr8 = str1.includes("reference", 12);//false
         }
+        // 12 search : 반환(숫자)
+        {
+            // "문자열".search("검색값");
+            // "문자열".search(정규식 표현);
+
+            const str1 = "javascript reference";
+            const currentStr1 = str1.search("javascript");        //0
+            const currentStr2 = str1.search("reference");         //11
+            const currentStr3 = str1.search("j");                 //0
+            const currentStr4 = str1.search("a");                 //1
+            const currentStr5 = str1.search("v");                 //2
+            const currentStr6 = str1.search("jquery");            //-1
+            const currentStr7 = str1.search("b");                 //-1
+            const currentStr8 = str1.search(/[a-z]/g);            //0
+        }
+
+        //13 match : 반환(배열)
+        {
+            const str1 = "javascript reference";
+            const currentStr1 = str1.match("javascript");       //javascript  
+            const currentStr2 = str1.match("reference");        //reference  
+            const currentStr3 = str1.match("r");                //r
+            const currentStr4 = str1.match(/reference/);        //reference
+            const currentStr5 = str1.match(/Reference/);        //null
+            const currentStr6 = str1.match(/Reference/i);       //reference
+            const currentStr7 = str1.match(/r/g);               //['r', 'r', 'r']
+            const currentStr8 = str1.match(/e/g);               //['e', 'e', 'e', 'e']
+        }
+
+        //14. charAt()
+        {
+            "문자열".charAt(숫자);
+
+            const str1 = "javascript reference";
+            const currentStr1 = str1.charAt();          //j  
+            const currentStr2 = str1.charAt("0");       //j  
+            const currentStr3 = str1.charAt("1");       //a  
+            const currentStr4 = str1.charAt("2");       //v 
+        }
+
     </script>
 </body>
 
