--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -410,6 +410,299 @@
         <!-- //sample12 -->
         <br>
         <br>
+        <h3>13. 함수 유형 : 함수와 매개변수를 이용한 형태</h3>
+        <p>
+            <br>
+        </p>
+        <div class="script">
+            <pre><code class="language-js">{
+function func(num, str1, str2) {
+document.write(num + ". " + str1 + "가 " + str2 + "되었습니다.<br>");
+}
+func("1", "함수", "실행");
+func("2", "자바스크립트", "실행");
+func("3", "제이쿼리", "실행");
+}
+</code></pre>
+        </div>
+        <div class="result">
+            <details>
+                <summary>결과보기</summary>
+                <div class="sample12_result">
+                    1. 함수가 실행되었습니다.
+                    2. 자바스크립트가 실행되었습니다.
+                    3. 제이쿼리가 실행되었습니다.
+                </div>
+            </details>
+        </div>
+        </div>
+        <!-- //sample13 -->
+        <br>
+        <br>
+        <h3>14. 함수 유형 : 함수와 변수를 이용한 형태</h3>
+        <p>
+            <br>
+        </p>
+        <div class="script">
+            <pre><code class="language-js">{
+function func(num, str1, str2) {
+document.write(num + ". " + str1 + "가 " + str2 + "되었습니다.<br>");
+}
+const youNum1 = 1;
+const youNum2 = 2;
+const youNum3 = 3;
+const youStr1 = "함수";
+const youStr2 = "자바스크립트";
+const youStr3 = "제이쿼리";
+const youCom1 = "실행";
+
+func(youNum1, youStr1, youCom1);
+func(youNum2, youStr2, youCom1);
+func(youNum3, youStr3, youCom1);
+}
+</code></pre>
+        </div>
+        <div class="result">
+            <details>
+                <summary>결과보기</summary>
+                <div class="sample12_result">
+                    1. 함수가 실행되었습니다.
+                    2. 자바스크립트가 실행되었습니다.
+                    3. 제이쿼리가 실행되었습니다.
+                </div>
+            </details>
+        </div>
+        </div>
+        <!-- //sample14 -->
+        <h3>15. 함수 유형 : 함수와 배열, 객체를 이용한 형태</h3>
+        <p>
+            <br>
+        </p>
+        <div class="script">
+            <pre><code class="language-js">{
+function func(num, str1, str2) {
+document.write(num + ". " + str1 + "가 " + str2 + "되었습니다.<br>");
+}
+const info = [
+{
+num: "1",
+name: "함수",
+com: "실행"
+},
+{
+num: "2",
+name: "자바스크립트",
+com: "실행"
+},
+{
+num: "3",
+name: "제이쿼리",
+com: "실행"
+}
+];
+
+func(info[0].num, info[0].name, info[0].com);
+func(info[1].num, info[1].name, info[1].com);
+func(info[2].num, info[2].name, info[2].com);
+}
+</code></pre>
+        </div>
+        <div class="result">
+            <details>
+                <summary>결과보기</summary>
+                <div class="sample12_result">
+                    1. 함수가 실행되었습니다.
+                    2. 자바스크립트가 실행되었습니다.
+                    3. 제이쿼리가 실행되었습니다.
+                </div>
+            </details>
+        </div>
+        </div>
+        <!-- //sample15 -->
+        <br>
+        <br>
+        <h3>16. 함수 유형 : 객체 안에 변수와 함수를 이용한 형태</h3>
+        <p>
+            <br>
+        </p>
+        <div class="script">
+            <pre><code class="language-js">{
+const info = {
+num1: 1,
+name1: "함수",
+word1: "실행",
+num2: 2,
+name2: "자바스크립트",
+word2: "실행",
+num3: 3,
+name3: "제이쿼리",
+word3: "실행",
+
+result1: function () {
+document.write(info.num1 + ". " + info.name1 + "가 " + info.word1 + "되었습니다.<br>");
+},
+result2: function () {
+document.write(info.num2 + ". " + info.name2 + "가 " + info.word2 + "되었습니다.<br>");
+},
+result3: function () {
+document.write(info.num3 + ". " + info.name3 + "가 " + info.word3 + "되었습니다.<br>");
+}
+}
+
+info.result1();
+info.result2();
+info.result3();
+}
+</code></pre>
+        </div>
+        <div class="result">
+            <details>
+                <summary>결과보기</summary>
+                <div class="sample12_result">
+                    1. 함수가 실행되었습니다.
+                    2. 자바스크립트가 실행되었습니다.
+                    3. 제이쿼리가 실행되었습니다.
+                </div>
+            </details>
+        </div>
+        </div>
+        <!-- //sample16 -->
+        <br>
+        <br>
+        <h3>17. 함수 유형 : 객체 생성자 함수</h3>
+        <p>
+            <br>
+        </p>
+        <div class="script">
+            <pre><code class="language-js">{
+function func(num, name, word) {
+this.num = num;
+this.name = name;
+this.word = word;
+
+this.result = function () {
+document.write(this.num + ". " + this.name + "가 " + this.word + "되었습니다.<br>");
+}
+}
+
+//인스턴스 생성
+const info1 = new func("1", "함수", "실행");
+const info2 = new func("2", "자바스크립트", "실행");
+const info3 = new func("3", "제이쿼리", "실행");
+
+//실행
+info1.result();
+info2.result();
+info3.result();
+}
+</code></pre>
+        </div>
+        <div class="result">
+            <details>
+                <summary>결과보기</summary>
+                <div class="sample12_result">
+                    1. 함수가 실행되었습니다.
+                    2. 자바스크립트가 실행되었습니다.
+                    3. 제이쿼리가 실행되었습니다.
+                </div>
+            </details>
+        </div>
+        </div>
+        <!-- //sample17 -->
+        <br>
+        <br>
+        <h3>18. 함수 유형 : 프로트타입 함수</h3>
+        <p>
+            <br>
+        </p>
+        <div class="script">
+            <pre><code class="language-js">{
+function func(num, name, word) {
+this.num = num;
+this.name = name;
+this.word = word;
+}
+
+func.prototype.result = function () {
+document.write(this.num + ". " + this.name + "가 " + this.word + "되었습니다.<br>");
+}
+
+//인스턴스 생성
+const info1 = new func("1", "함수", "실행");
+const info2 = new func("2", "자바스크립트", "실행");
+const info3 = new func("3", "제이쿼리", "실행");
+
+//실행
+info1.result();
+info2.result();
+info3.result();
+}
+ </code></pre>
+        </div>
+        <div class="result">
+            <details>
+                <summary>결과보기</summary>
+                <div class="sample12_result">
+                    1. 함수가 실행되었습니다.
+                    2. 자바스크립트가 실행되었습니다.
+                    3. 제이쿼리가 실행되었습니다.
+                </div>
+            </details>
+        </div>
+        </div>
+        <!-- //sample18 -->
+        <br>
+        <br>
+        <h3>19. 함수 유형 : 객체 리터럴 함수</h3>
+        <p>
+            <br>
+        </p>
+        <div class="script">
+            <pre><code class="language-js">{
+function func(num, name, word) {
+this.num = num;
+this.name = name;
+this.word = word;
+}
+
+func.prototype = {
+result1: function () {
+document.write(this.num + ". " + this.name + "가 " + this.word + "되었습니다.<br>");
+},
+result2: function () {
+document.write(this.num + ". " + this.name + "가 " + this.word + "되었습니다.<br>");
+},
+result3: function () {
+document.write(this.num + ". " + this.name + "가 " + this.word + "되었습니다.<br>");
+}
+}
+
+//인스턴스 생성
+const info1 = new func("1", "함수", "실행");
+const info2 = new func("2", "자바스크립트", "실행");
+const info3 = new func("3", "제이쿼리", "실행");
+
+//실행
+info1.result1();
+info2.result2();
+info3.result3();
+}
+</code></pre>
+        </div>
+        <div class="result">
+            <details>
+                <summary>결과보기</summary>
+                <div class="sample12_result">
+                    1. 함수가 실행되었습니다.
+                    2. 자바스크립트가 실행되었습니다.
+                    3. 제이쿼리가 실행되었습니다.
+                </div>
+            </details>
+        </div>
+        </div>
+        <!-- //sample19 -->
+        <br>
+        <br>
     </main>
     <!-- //main -->
 
@@ -624,6 +917,170 @@
 
             //document.write(func("함수가 실행되었습니다.12<br>"));
         }
+
+        // 13. 함수 유형 : 함수와 매개변수를 이용한 형태
+        {
+            function func(num, str1, str2) {
+                document.write(num + ". " + str1 + "가 " + str2 + "되었습니다.<br>");
+            }
+            func("1", "함수", "실행");
+            func("2", "자바스크립트", "실행");
+            func("3", "제이쿼리", "실행");
+        }
+
+        // 14. 함수 유형 : 함수와 변수를 이용한 형태
+        {
+            function func(num, str1, str2) {
+                document.write(num + ". " + str1 + "가 " + str2 + "되었습니다.<br>");
+            }
+            const youNum1 = 1;
+            const youNum2 = 2;
+            const youNum3 = 3;
+            const youStr1 = "함수";
+            const youStr2 = "자바스크립트";
+            const youStr3 = "제이쿼리";
+            const youCom1 = "실행";
+
+            func(youNum1, youStr1, youCom1);
+            func(youNum2, youStr2, youCom1);
+            func(youNum3, youStr3, youCom1);
+        }
+
+        // 15. 함수 유형 : 함수와 배열, 객체를 이용한 형태
+        {
+            function func(num, str1, str2) {
+                document.write(num + ". " + str1 + "가 " + str2 + "되었습니다.<br>");
+            }
+            const info = [
+                {
+                    num: "1",
+                    name: "함수",
+                    com: "실행"
+                },
+                {
+                    num: "2",
+                    name: "자바스크립트",
+                    com: "실행"
+                },
+                {
+                    num: "3",
+                    name: "제이쿼리",
+                    com: "실행"
+                }
+            ];
+
+            func(info[0].num, info[0].name, info[0].com);
+            func(info[1].num, info[1].name, info[1].com);
+            func(info[2].num, info[2].name, info[2].com);
+        }
+
+        // 16. 함수 유형 : 객체 안에 변수와 함수를 이용한 형태
+        {
+            const info = {
+                num1: 1,
+                name1: "함수",
+                word1: "실행",
+                num2: 2,
+                name2: "자바스크립트",
+                word2: "실행",
+                num3: 3,
+                name3: "제이쿼리",
+                word3: "실행",
+
+                result1: function () {
+                    document.write(info.num1 + ". " + info.name1 + "가 " + info.word1 + "되었습니다.<br>");
+                },
+                result2: function () {
+                    document.write(info.num2 + ". " + info.name2 + "가 " + info.word2 + "되었습니다.<br>");
+                },
+                result3: function () {
+                    document.write(info.num3 + ". " + info.name3 + "가 " + info.word3 + "되었습니다.<br>");
+                }
+            }
+
+            info.result1();
+            info.result2();
+            info.result3();
+        }
+
+        // 17. 함수 유형 : 객체 생성자 함수
+        {
+            function func(num, name, word) {
+                this.num = num;
+                this.name = name;
+                this.word = word;
+
+                this.result = function () {
+                    document.write(this.num + ". " + this.name + "가 " + this.word + "되었습니다.<br>");
+                }
+            }
+
+            //인스턴스 생성
+            const info1 = new func("1", "함수", "실행");
+            const info2 = new func("2", "자바스크립트", "실행");
+            const info3 = new func("3", "제이쿼리", "실행");
+
+            //실행
+            info1.result();
+            info2.result();
+            info3.result();
+        }
+
+        // 18. 함수 유형 : 프로트타입 함수
+        {
+            function func(num, name, word) {
+                this.num = num;
+                this.name = name;
+                this.word = word;
+            }
+
+            func.prototype.result = function () {
+                document.write(this.num + ". " + this.name + "가 " + this.word + "되었습니다.<br>");
+            }
+
+            //인스턴스 생성
+            const info1 = new func("1", "함수", "실행");
+            const info2 = new func("2", "자바스크립트", "실행");
+            const info3 = new func("3", "제이쿼리", "실행");
+
+            //실행
+            info1.result();
+            info2.result();
+            info3.result();
+        }
+
+        //19. 함수 유형 : 객체 리터럴 함수
+        {
+            function func(num, name, word) {
+                this.num = num;
+                this.name = name;
+                this.word = word;
+            }
+
+            func.prototype = {
+                result1: function () {
+                    document.write(this.num + ". " + this.name + "가 " + this.word + "되었습니다.<br>");
+                },
+                result2: function () {
+                    document.write(this.num + ". " + this.name + "가 " + this.word + "되었습니다.<br>");
+                },
+                result3: function () {
+                    document.write(this.num + ". " + this.name + "가 " + this.word + "되었습니다.<br>");
+                }
+            }
+
+            //인스턴스 생성
+            const info1 = new func("1", "함수", "실행");
+            const info2 = new func("2", "자바스크립트", "실행");
+            const info3 = new func("3", "제이쿼리", "실행");
+
+            //실행
+            info1.result1();
+            info2.result2();
+            info3.result3();
+        }
+
+        //20. 클래스 : 함수 집합체 
 
 
         //01. 선언적 함수
