--- a/javascript/effect/quizEffect06.html
+++ b/javascript/effect/quizEffect06.html
@@ -13,6 +13,7 @@
     <link href="https://webfontworld.github.io/Cafe24Dangdanghae/Cafe24Dangdanghae.css" rel="stylesheet">
 
 </head>
+<!--  -->
 
 <body>
     <header id="header">
@@ -23,8 +24,8 @@
                 <li><a href="quizEffect02">2</a></li>
                 <li><a href="quizEffect03">3</a></li>
                 <li><a href="quizEffect06">4</a></li>
-                <li class="active"><a href="quizEffect04">5</a></li>
-                <li><a href="quizEffect06">6</a></li>
+                <li><a href="quizEffect05">5</a></li>
+                <li class="active"><a href="quizEffect04">6</a></li>
             </ul>
         </nav>
     </header>
@@ -81,8 +82,9 @@
                     </label>
 
                 </div>
-                <button class="confirm">정답확인</button>
                 <div class="result"></div>
+                <button class="confirm">다음문제보기</button>
+              
                 </div>
             </div> -->
         </div>
@@ -103,25 +105,25 @@
                 answerType: "웹디자인기능사 2015년 05회",
                 answerNum: "1",
                 answerAsk: "유채색에서 볼 수 있는 대비로 연속대비라고도 하며, 잔상 효과와 가장 밀접한 관련이 있는 것은? ",
-                answerChoice: {
+                answerChoice: [
                     1: "색상대비",
                     2: "계시대비",
                     3: "채도대비",
                     4: "명도대비",
-                },
-                answerResult: "2",
+                ],
+                answerResult: "계시대비",
                 answerEx: ""
             },
             {
                 answerType: "웹디자인기능사 2015년 05회",
                 answerNum: "2",
                 answerAsk: "팽창이동패턴? ",
-                answerChoice: {
+                answerChoice: [
                     1: "색상대비",
                     2: "계시대비",
                     3: "채도대비",
                     4: "명도대비",
-                },
+                ],
                 answerResult: "3",
                 answerEx: ""
             },
@@ -129,13 +131,13 @@
                 answerType: "웹디자인기능사 2015년 05회",
                 answerNum: "3",
                 answerAsk: "기계화와 대량 생산에 의한 생활 용품의 품질 저하에 반대하여 월리엄 모리스를 중심으로 영국에서 일어난 것은?",
-                answerChoice: {
+                answerChoice: [
                     1: "산업혁명",
                     2: "아르 누보",
                     3: "미술공예운동",
                     4: "대규모생산운동",
-                },
-                answerResult: "3",
+                ],
+                answerResult: "미술공예운동",
                 answerEx: ""
             },
             {
@@ -148,141 +150,119 @@
                     3: "녹색계열",
                     4: "보라색계열",
                 },
-                answerResult: "3",
+                answerResult: "녹색계열",
                 answerEx: ""
             },
             {
                 answerType: "웹디자인기능사 2015년 05회",
                 answerNum: "5",
                 answerAsk: "다음의 관용색명 중 성격이 다른 것은? ",
-                answerChoice: {
+                answerChoice: [
                     1: "살구색	",
                     2: "밤색",
                     3: "레몬색	",
                     4: "상아색",
-                },
-                answerResult: "4",
+                ],
+                answerResult: "상아색",
                 answerEx: ""
             },
             {
                 answerType: "웹디자인기능사 2015년 05회",
                 answerNum: "6",
                 answerAsk: "태양광선이 투사되는 위치에 프리즘을 놓아 굴절된 광선을 스크린에 투사하여 나타난 여러 가지 색의 띠를 무엇이라 하는가? ",
-                answerChoice: {
+                answerChoice: [
                     1: "색상대비전자파	",
                     2: "감마선",
                     3: "스펙트럼	",
                     4: "자외선",
-                },
-                answerResult: "3",
+                ],
+                answerResult: "스펙트럼",
                 answerEx: ""
             },
         ];
 
         //선택자
+        const quizType = document.querySelector(".quiz__type");                  //퀴즈 종류
+        const quizQuestion = document.querySelector(".quiz__question");    //퀴즈 번호
+        const quizSelects = document.querySelector("quiz__selects");   //객관식 보기
+        const quizResult = document.querySelector(".quiz__answer .result");      //정답 결과
+        const quizConfirm = document.querySelector(".quiz__answer .confirm");    //정답 확인 버튼
+        const quizView = document.querySelector(".quiz__view");     //강아지
+
         const quizWrap = document.querySelector(".quiz__wrap");
-        const quizScore = document.querySelector
+        const quizScore = document.querySelector("quiz__selects");
+
+        let quizCount = 0;
+
         //문제출력
         const updateQuiz = () => {
-            const exam = [];
+            const questionTag = `
+            <span class = "number">${quizInfo[0].answerNum}.</span>
+            <div class ="ask">${quizInfo[0].answerAsk}</div>
+            `
 
-            quizInfo.forEach((question, number) => {
-                exam.push(`<div class="quiz">
-                <span class="quiz__type">${question.answerType}</span>
-                <h2 class="quiz__question">
-                    <span class="number">${question.answerNum}</span>
-                    <div class="ask">${question.answerAsk}
-                    </div>
-                </h2>
-                <div class="quiz__view">
-                    <div class="true">정답입니다</div>
-                    <div class="false">틀렸습니다</div>
-                    <div class="dog">
-                        <div class="head">
-                            <div class="ears"></div>
-                            <div class="face"></div>
-                            <div class="eyes">
-                                <div class="teardrop"></div>
-                            </div>
-                            <div class="nose"></div>
-                            <div class="mouth">
-                                <div class="tongue"></div>
-                            </div>
-                            <div class="chin"></div>
-                        </div>
-                        <div class="body">
-                            <div class="tail"></div>
-                            <div class="legs"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="quiz__answer">
-                   <div class="quiz__selects">
-                    <label for="select1${number}"> 
-                        <input type="radio" id="select1${number}" class="select" name="select${number}" value="1">
-                        <span class="choice">${question.answerChoice[1]}</span>
+            const choiceTag = `
+           <label for="select1"> 
+                        <input type="radio" id="select1" class="select" name="select" value="1">
+                        <span class="choice">${quizInfo[0].answerChoice[0]}</span>
                     </label>
-                    <label for ="select2${number}"> 
-                        <input type="radio" id="select2${number}" class="select" name="select${number}" value="2">
-                        <span class="choice">${question.answerChoice[2]}</span>
+                    <label for ="select2"> 
+                        <input type="radio" id="select2" class="select" name="select" value="2">
+                        <span class="choice">${quizInfo[0].answerChoice[1]}</span>
                     </label>
-                    <label for ="select3${number}"> 
-                        <input type="radio" id="select3${number}" class="select" name="select${number}" value="3">
-                        <span class="choice">${question.answerChoice[3]}</span>
+                    <label for ="select3"> 
+                        <input type="radio" id="select3" class="select" name="select" value="3">
+                        <span class="choice">${quizInfo[0].answerChoice[2]}</span>
                     </label>
-                    <label for ="select4${number}"> 
-                        <input type="radio" id="select4${number}" class="select" name="select${number}" value="4">
-                        <span class="choice">${question.answerChoice[4]}</span>
+                    <label for ="select4"> 
+                        <input type="radio" id="select4" class="select" name="select" value="4">
+                        <span class="choice">${quizInfo[0].answerChoice[3]}</span>
                     </label>
+                    `;
 
-                </div>
-                <button class="confirm">정답확인</button>
-                <div class="result"></div>
-                </div>
-            </div>`);
+            quizType.innerHTML = quizInfo[0].answerType;
+            quizQuestion.innerHTML = queestionTag;
+            quizSelects.innerHTML = choiceTag;
+            quizResult.innerHTML = quizInfo[index].answerEx;
 
-            });
-            exam.push(`
-            <div class="quiz__confirm">
-                <button class = "check">정답확인</button>
-                <div class = "ex"></div>
-                </div>
-            `);
-            quizWrap.innerHTML = exam.join('');
+            const quizChoice = quizSelects.querySelectorAll(".choice")
+
+            for (let i = 0; i < quizchoice.length; i++) {
+                quizchoice[i].setAttribute("onclick", "choiceSelected(this)")
+            }
+            quizResult.stye.display = "none";
+            quizConfirm.stye.display = "none";
         }
-        updateQuiz();
+        updateQuiz(quizCounter);
 
-        //정답확인
-        const answerQuiz = () => {
-            const quizSelects = document.querySelectorAll("quiz__selects");
-            const quizView = document.querySelectorAll(".quiz__view");
-        }
-        //사용자체크 문제정답
-        quizInfo.forEach((question, number) => {
-            const quizSelectsWrap = quizSelects[number];
-            const userSelector = `input[name=select${number}]:checked`;
-            const userAnswer = (quizSelectsWrap.querySelector(userSelector) || {}).value;
-            const quizView = document.querySelectorAll("quiz__view")
-
-            if (userAnswer == question.answerResult) {
-                console.log("정답")
-                quizView[number].classList.add("like");
+        const choiceSelected = (answer) => {
+            let userAnswer = answer.textContent;
+            let currentAnswer = quizInfo[quizCount].answerResult;
+            if (userAnswer == currentAnswer) {
+                console.log("정답");
+                quizView.classList.add("like");
             } else {
                 console.log("오답")
-                quizView[number].classList.add("dislike");
-                const divBox = document.createElement("div");
-                quizSelectsWrap.appendchild(divBox).innerHTML = `<p class="result">${question.answerEx}</p >`
+                quizView.classList.add("dislike");
+                quizResult.style.display = "block";
+                // arlert(answer.textContent);
             }
+            quizConfirm.style.display = "block";
+        }
 
-        });
-        //전체문제수
-        console.log(quizInfo.length)
 
-        //내가 맞힌수
-        console.log(quizScore)
+        const answerQuiz = () => {
+            quizCount++;
+            updateQuiz(quizCount);
+            quizView.classList.remove("like", "dislike")
+        }
 
-        //정답클릭
-        document.querySelector(".quiz__confirm.check").addEventListener("click", answerQuiz);
+        //마지막 문제
+        if
+
+
+
+            quizConfirm.addEventlistener("click", answerQuiz);
 
     </script>
 
