--- a/javascript/effect/quizEffect05.html
+++ b/javascript/effect/quizEffect05.html
@@ -22,8 +22,8 @@
                 <li><a href="quizEffect01">1</a></li>
                 <li><a href="quizEffect02">2</a></li>
                 <li><a href="quizEffect03">3</a></li>
-                <li class="active"><a href="quizEffect04">4</a></li>
-                <li><a href="quizEffect05">5</a></li>
+                <li><a href="quizEffect06">4</a></li>
+                <li class="active"><a href="quizEffect04">5</a></li>
                 <li><a href="quizEffect06">6</a></li>
             </ul>
         </nav>
@@ -33,7 +33,7 @@
     <main id="main">
         <div class="quiz__wrap">
             <!-- <div class="quiz">
-                <span class="quiz__type"></span>
+                <span class="quiz__type"></span> 
                 <h2 class="quiz__question">
                     <span class="number"></span>
                     <div class="ask">
@@ -180,73 +180,109 @@
         ];
 
         //선택자
-            const quizWrap = document.querySelector(".quiz__wrap");
-
+        const quizWrap = document.querySelector(".quiz__wrap");
+        const quizScore = document.querySelector
         //문제출력
-        function updateQuiz() {
+        const updateQuiz = () => {
             const exam = [];
 
             quizInfo.forEach((question, number) => {
-                exam.push(`
-                   <div class="quiz">
-                        <span class="quiz__type">${question.answerType}</span>
-                        <h2 class="quiz__question">
-                            <span class="number">${question.answerNum}</span>
-                            <div class="ask">${question.answerAsk}</div>
-                        </h2>
-                        <div class="quiz__view">
-                            <div class="true">정답입니다</div>
-                            <div class="false">틀렸습니다</div>
-                            <div class="dog">
-                                <div class="head">
-                                    <div class="ears"></div>
-                                    <div class="face"></div>
-                                    <div class="eyes">
-                                        <div class="teardrop"></div>
-                                    </div>
-                                    <div class="nose"></div>
-                                    <div class="mouth">
-                                        <div class="tongue"></div>
-                                    </div>
-                                    <div class="chin"></div>
-                                </div>
-                                <div class="body">
-                                    <div class="tail"></div>
-                                    <div class="legs"></div>
-                                </div>
+                exam.push(`<div class="quiz">
+                <span class="quiz__type">${question.answerType}</span>
+                <h2 class="quiz__question">
+                    <span class="number">${question.answerNum}</span>
+                    <div class="ask">${question.answerAsk}
+                    </div>
+                </h2>
+                <div class="quiz__view">
+                    <div class="true">정답입니다</div>
+                    <div class="false">틀렸습니다</div>
+                    <div class="dog">
+                        <div class="head">
+                            <div class="ears"></div>
+                            <div class="face"></div>
+                            <div class="eyes">
+                                <div class="teardrop"></div>
                             </div>
+                            <div class="nose"></div>
+                            <div class="mouth">
+                                <div class="tongue"></div>
+                            </div>
+                            <div class="chin"></div>
                         </div>
-                        <div class="quiz__answer">
-                        <div class="quiz__selects">
-                            <label for="select1"> 
-                                <input type="radio" id="select1" class="select" name="select" value="1">
-                                <span class="choice"></span>
-                            </label>
-                            <label for ="select2"> 
-                                <input type="radio" id="select2" class="select" name="select" value="2">
-                                <span class="choice"></span>
-                            </label>
-                            <label for ="select3"> 
-                                <input type="radio" id="select3" class="select" name="select" value="3">
-                                <span class="choice"></span>
-                            </label>
-                            <label for ="select4"> 
-                                <input type="radio" id="select4" class="select" name="select" value="4">
-                                <span class="choice"></span>
-                            </label>
-
-                        </div>
-                        <button class="confirm">정답확인</button>
-                        <div class="result"></div>
+                        <div class="body">
+                            <div class="tail"></div>
+                            <div class="legs"></div>
                         </div>
                     </div>
-                `);
-            })
-        
-        //console.log(exam);
-        quizWrap.innerHTML = exam.join('');
-    }
+                </div>
+                <div class="quiz__answer">
+                   <div class="quiz__selects">
+                    <label for="select1${number}"> 
+                        <input type="radio" id="select1${number}" class="select" name="select${number}" value="1">
+                        <span class="choice">${question.answerChoice[1]}</span>
+                    </label>
+                    <label for ="select2${number}"> 
+                        <input type="radio" id="select2${number}" class="select" name="select${number}" value="2">
+                        <span class="choice">${question.answerChoice[2]}</span>
+                    </label>
+                    <label for ="select3${number}"> 
+                        <input type="radio" id="select3${number}" class="select" name="select${number}" value="3">
+                        <span class="choice">${question.answerChoice[3]}</span>
+                    </label>
+                    <label for ="select4${number}"> 
+                        <input type="radio" id="select4${number}" class="select" name="select${number}" value="4">
+                        <span class="choice">${question.answerChoice[4]}</span>
+                    </label>
+
+                </div>
+                <button class="confirm">정답확인</button>
+                <div class="result"></div>
+                </div>
+            </div>`);
+
+            });
+            exam.push(`
+            <div class="quiz__confirm">
+                <button class = "check">정답확인</button>
+                <div class = "ex"></div>
+                </div>
+            `);
+            quizWrap.innerHTML = exam.join('');
+        }
         updateQuiz();
+
+        //정답확인
+        const answerQuiz = () => {
+            const quizSelects = document.querySelectorAll("quiz__selects");
+            const quizView = document.querySelectorAll(".quiz__view");
+        }
+        //사용자체크 문제정답
+        quizInfo.forEach((question, number) => {
+            const quizSelectsWrap = quizSelects[number];
+            const userSelector = `input[name=select${number}]:checked`;
+            const userAnswer = (quizSelectsWrap.querySelector(userSelector) || {}).value;
+            const quizView = document.querySelectorAll("quiz__view")
+
+            if (userAnswer == question.answerResult) {
+                console.log("정답")
+                quizView[number].classList.add("like");
+            } else {
+                console.log("오답")
+                quizView[number].classList.add("dislike");
+                const divBox = document.createElement("div");
+                quizSelectsWrap.appendchild(divBox).innerHTML = `<p class="result">${question.answerEx}</p >`
+            }
+
+        });
+        //전체문제수
+        console.log(quizInfo.length)
+
+        //내가 맞힌수
+        console.log(quizScore)
+
+        //정답클릭
+        document.querySelector(".quiz__confirm.check").addEventListener("click", answerQuiz);
 
     </script>
 
