--- a/html/laytag.html
+++ b/html/laytag.html
@@ -202,7 +202,7 @@
                     </tr>
                     <tr>
                         <td>&lt;footer&gt;&lt;/footer&gt;</td>
-                        <td>푸터 영역을 의미하는 태그, 섹션 작성자나 저작권에 대한 정보, 관련되 ㄴ문서의 링크를 포함<br>
+                        <td>푸터 영역을 의미하는 태그, 섹션 작성자나 저작권에 대한 정보, 관련된 문서의 링크를 포함<br>
                             텍스트, 인란인요소, 즐록레벨요소를 포함, &lt;header&gt;, &lt;footer&gt;태그는 포함할 수 없음</td>
                     </tr>
                 </tbody>
