--- a/javascript/effect/quiz05.html
+++ b/javascript/effect/quiz05.html
@@ -42,6 +42,7 @@
         <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
     </footer>
     <!-- //footer -->
+
     <script>
         //const num = [100,200,300,400,500];
         //num.forEach((el)=>{
@@ -887,7 +888,7 @@
             //사용자가 체크한 라디오 박스  == 문제 정답
             quizInfo.forEach((question, number) => {
                 const quizSelectsWrap = quizSelects[number];                    //전체 보기 박스
-                const userSelector = `input[name=select${number}]:checked`;         //사용자가 클린한 라디오 박스
+                const userSelector = `input[name=select${number}]:checked`;         //사용자가 클릭한 라디오 박스
                 const userAnswer = (quizSelectsWrap.querySelector(userSelector) || {}).value
                 const quizView = document.querySelectorAll(".quiz__view");
                 console.log(quizSelects)
